# build_system_task

./: .gitignore  CMakeLists.txt  README.md  build_graph.cpp  build_graph.hpp  builder.cpp  builder.hpp  cli_common.cpp  cli_common.hpp  dependency_manager.cpp  dependency_manager.hpp  file_mode.cpp  file_mode.hpp  interactive_mode.cpp  interactive_mode.hpp  main.cpp  task.hpp  task_queue.cpp  task_queue.hpp  test_tasks.hpp  thread_pool.cpp  thread_pool.hpp
